# pycrostates

./: .all-contributorsrc  .codacy.yaml  .flake8  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  =61.0.0  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  azure-pipelines-steps-mne.yml  azure-pipelines-steps.yml  azure-pipelines.yaml  azure-pipelines.yml  dev.ipynb  dev_main.ipynb  draft.py  file.pkl  pyproject.toml  requirements.txt  requirements_doc.txt  requirements_testing.txt  setup.py  test-output.xml  test.ipynb
.github/actions/get-testing-dataset/: action.yaml
.github/workflows/: build.yml  code-style.yaml  code-style.yml  doc.yml  draft-pdf.yml  publish-to-test-pypi.yml  publish.yaml  publish.yml  pytest.yaml  stubs.yaml  style.yml
docs/: Makefile  links.inc  make.bat  references.bib  requirements.txt
docs/source/: clustering.rst  conf.py  index.rst  install.md  install.rst  links.inc  microstates.rst  overview.md  overview.rst
docs/source/API/: clustering.rst  datasets.rst  index.rst  io.rst  metrics.rst  most_used_classes.rst  preprocessing.rst  segmentation.rst  viz.rst
docs/source/Overview/: index.rst  readme.rst
docs/source/_templates/: paper.html
docs/source/api/: cluster.rst  datasets.rst  index.rst  io.rst  metrics.rst  most_used_classes.rst  preprocessing.rst  segmentation.rst  viz.rst
docs/source/auto_tutorials/: Single_subject.ipynb  Single_subject.py  Single_subject.rst  Single_subject_codeobj.pickle  index.rst  plot_Single_subject.ipynb  plot_Single_subject.py  plot_Single_subject.py.md5  plot_Single_subject.rst  plot_Single_subject_codeobj.pickle  plot_Single_subject_resampling.ipynb  plot_Single_subject_resampling.py.md5  plot_Single_subject_resampling.rst  plot_Single_subject_resampling_codeobj.pickle  plot_extract_gfp_peaks.rst  plot_extract_gfp_peaks_codeobj.pickle  plot_modK.ipynb  plot_modK.py.md5  plot_modK.rst  plot_modK_codeobj.pickle  searchindex.bak  searchindex.dir  sg_execution_times.rst
docs/source/dev/: changelog.rst  development.rst  index.rst  whats_new.rst
docs/source/dev/changes/: 0.2.0.inc  (+11 more)
docs/source/install/: index.rst  install.md
docs/source/microstates/: bibliography.rst  glossary.rst  index.rst  microstates.rst
docs/source/overview/: index.rst
docs/source/tutorials/: index.rst
paper/: paper.bib  paper.md
pycrostates/: __init__.py  __init__.pyi  _typing.py  _typing.pyi  _version.py  conftest.py
pycrostates/cluster/: __init__.py  __init__.pyi  _base.py  _base.pyi  _custom.py  aahc.py  aahc.pyi  array.py  base.py  kmeans.py  kmeans.pyi
pycrostates/cluster/tests/: test_aahc.py  test_array.py  test_base.py  test_custom.py  test_kmeans.py
pycrostates/cluster/utils/: __init__.py  __init__.pyi  utils.py  utils.pyi
pycrostates/clustering/: __init__.py  clustering.py
pycrostates/clustering/tests/: test_clustering.py
pycrostates/datasets/: __init__.py  __init__.pyi
pycrostates/datasets/lemon/: __init__.py  __init__.pyi  lemon.py  lemon.pyi
pycrostates/datasets/tests/: test_datasets.py
pycrostates/fitting/: __init__.py  fitting.py
pycrostates/html_templates/: __init__.py  _templates.py
pycrostates/html_templates/repr/: AAHCluster.html.jinja  BaseCluster.html copy.jinja  BaseSegmentation.html.jinja  ChData.html.jinja  ModKMeans.html.jinja
pycrostates/io/: ChData.py  __init__.py  __init__.pyi  ch_data.py  ch_data.pyi  fif.py  fiff.py  fiff.pyi  meas_info.py  meas_info.pyi  reader.py  reader.pyi
pycrostates/io/tests/: test_ch_data.py  test_fiff.py  test_meas_info.py  test_reader.py
pycrostates/metrics/: __init__.py  __init__.pyi  calinski_harabasz.py  calinski_harabasz.pyi  davies_bouldin.py  davies_bouldin.pyi  dunn.py  dunn.pyi  metrics.py  silhouette.py  silhouette.pyi
pycrostates/metrics/tests/: test_metrics.py
pycrostates/preprocessing/: GfpExtractor.py  __init__.py  __init__.pyi  extract_gfp_peaks.py  extract_gfp_peaks.pyi  preprocessing.py  resample.py  resample.pyi  spatial_filter.py  spatial_filter.pyi
pycrostates/preprocessing/tests/: test_extract_gfp_peaks.py  test_preprocessing.py  test_resample.py  test_spatial_filter.py
pycrostates/segmentation/: __init__.py  __init__.pyi  _base.py  _base.pyi  autoinformation.py  entropy.py  entropy.pyi  information.py  segmentation.py  segmentation.pyi  transitions.py  transitions.pyi
pycrostates/segmentation/tests/: test_entropy.py  test_segmentation.py  test_transitions.py
pycrostates/tests/: test_clustering.py  test_datasets.py  test_metrics.py  test_preprocessing.py  test_segmentation.py  test_utils.py
pycrostates/utils/: __init__.py  __init__.pyi  _checks.py  _checks.pyi  _clusters.py  _config.py  _config.pyi  _docs.py  _fixes.py  _fixes.pyi  _imports.py  _imports.pyi  _logs.py  _logs.pyi  mixin.py  mixin.pyi  sys_info.py  sys_info.pyi  utils.py  utils.pyi
pycrostates/viz/: __init__.py  __init__.pyi  cluster_centers.py  cluster_centers.pyi  segmentation.py  segmentation.pyi  viz.py
tools/: stubgen.py
tutorials/: README.rst  plot_Single_subject.py  plot_Single_subject_resampling.py  plot_extract_gfp_peaks.py  plot_modK.py
tutorials/backfitting/: README.rst
tutorials/cluster/: 00_modK.py  10_subject_level_with_resampling.py  README.rst
tutorials/clustering/: 00_modK.py  README.rst  plot_extract_gfp_peaks.py  plot_find_best_number_of_clusters.py  plot_modK.py  plot_segmentation.py  plot_subject_level_with_resampling.py
tutorials/group_level_analysis/: 00_group_level_with_individual_clusters.py  10_group_level_with_individual_gfp_peaks.py  README.rst  plot_group_level_analysis.py  plot_group_level_with_individual_clusters.py  plot_group_level_with_individual_gfp_peaks.py
tutorials/metrics/: 00_metrics.py  README.rst  plot_metrics.py  plot_silouhette.py
tutorials/preprocessing/: 00_extract_gfp_peaks.py  10_resampling.py  20_spatial_filter.py  README.rst  plot_extract_gfp_peaks.py  plot_resampling.py  plot_spatial_filter.py
tutorials/segmentation/: 00_segmentation.py  01_entropy.py  01_information.py  10_entropy.ipynb  10_entropy.py  plot_segmentation.py
(+42 files in other folders)
