[build-system]
requires = ['setuptools >= 61.0.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'pycrostates'
version = '0.3.0'
description = 'A simple open source Python package for EEG microstate segmentation.'
readme = 'README.md'
license = {file = 'LICENSE'}
requires-python = '>=3.8'
authors = [
    {name = 'Victor Férat', email = 'victor.ferat@unige.ch'},
]
maintainers = [
    {name = 'Victor Férat', email = 'victor.ferat@unige.ch'},
    {name = 'Mathieu Scheltienne', email = 'mathieu.scheltienne@fcbg.ch'},
]
keywords = [
    'python',
    'neuroscience',
    'neuroimaging',
    'eeg',
    'microstates',
    'brain',
]
classifiers = [
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Natural Language :: English',
    'License :: OSI Approved :: BSD License',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering',
]
dependencies = [
    'numpy>=1.21',
    'scipy',
    'mne>=1.0.0',
    'joblib',
    'matplotlib',
    'scikit-learn',
    'pooch',
    'decorator',
    'jinja2',
    'importlib-resources; python_version < "3.9"',
]

[project.optional-dependencies]
build = ['build', 'twine']
docs = [
    'memory-profiler',
    'numpydoc',
    'pandas',
    'pydata-sphinx-theme',
    'pymatreader',
    'sphinx',
    'sphinxcontrib-bibtex',
    'sphinx-copybutton',
    'sphinx-design',
    'sphinx_gallery',
    'sphinx-issues',
    'seaborn',
]
style = [
    'bibclean',
    'black',
    'codespell',
    'isort',
    'flake8',
    'pydocstyle[toml]',
]
test = [
    'pymatreader',
    'pytest==7.0.1',
    'pytest-azurepipelines',
    'pytest-cov',
]
all = [
    'pycrostates[build]',
    'pycrostates[docs]',
    'pycrostates[style]',
    'pycrostates[test]',
]

[project.urls]
homepage = 'https://pycrostates.readthedocs.io/en/master/'
documentation = 'https://pycrostates.readthedocs.io/en/master/'
source = 'https://github.com/vferat/pycrostates'
tracker = 'https://github.com/vferat/pycrostates/issues'

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ['pycrostates*']
exclude = ['pycrostates*tests']

[tool.setuptools.package-data]
"pycrostates.datasets" = ["**/*.txt"]
"pycrostates.html_templates" = ["repr/*.jinja"]

[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
(
      __pycache__
    | \.github
    | setup.py
    | docs/
    | tutorials/
    | pycrostates/html_templates/repr
)
'''

[tool.isort]
profile = 'black'
multi_line_output = 3
line_length = 79
py_version = 37
extend_skip_glob = [
    'setup.py',
    'docs/*',
    'tutorials/*',
    'pycrostates/html_templates/repr/*',
]

[tool.pydocstyle]
convention = 'numpy'
ignore-decorators= '(copy_doc|property|.*setter|.*getter)'
match = '^(?!setup|__init__|test_).*\.py'
match-dir = '^(?!docs|tutorials|build|dist|\.).*'
add_ignore = 'D100,D104,D107'

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '--durations 20 --junit-xml=junit-results.xml --verbose'
filterwarnings = [
    "ignore:Matplotlib is currently using agg:UserWarning",
]

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
    '**/__init__.py',
    '**/pycrostates/_version.py',
    '**/pycrostates/utils/_fixes.py',
    '**/tests/**',
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'if __name__ == .__main__.:',
]
precision = 2
